syntax = "proto3";

package grpc;

service VaccelAgent {
	// Session handling
	rpc CreateSession(CreateSessionRequest) returns (CreateSessionResponse);
	rpc DestroySession(DestroySessionRequest) returns (VaccelEmpty);
	rpc ImageClassification(ImageClassificationRequest) returns (ImageClassificationResponse);
}

message CreateSessionRequest {
	uint32 flags = 1;
}

message DestroySessionRequest {
	uint32 session_id = 1;
}

message CreateSessionResponse {
	uint32 session_id = 1;
}

message ImageClassificationRequest {
	uint32 session_id = 1;
	bytes image = 2;
}

message ImageClassificationResponse {
	bytes tags = 1;
}

message VaccelEmpty {}
