// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package vaccel;

import "error.proto";

message ProfilingRequest {
	int64 session_id = 1;
};

message ProfRegion {
	message Sample {
		uint64 start = 1;
		uint64 time = 2;
	}
	string name = 1;
	repeated Sample samples = 2;
};

message ProfRegions {
	repeated ProfRegion timer = 1;
};

message ProfilingResponse {
	ProfRegions result = 1;
};
