// SPDX-License-Identifier: Apache-2.0

syntax = "proto3";

package vaccel;

message CreateSessionRequest {
	uint32 flags = 1;
}

message UpdateSessionRequest {
	int64 session_id = 1;
	uint32 flags = 2;
}

message DestroySessionRequest {
	int64 session_id = 1;
}

message CreateSessionResponse {
	int64 session_id = 1;
}
